# Kramabench

./: .gitignore  README.md  SEC_identity.json  evaluate.py  exec_script.sh  pyproject.toml  requirements.txt  results_latex.ipynb  tmp_script.py
benchmark/: __init__.py  benchmark.py  benchmark_api.py  benchmark_utils.py  evaluator.py  executor.py  metrics.py
benchmark/fixtures/: answer_type_fixtures.json
benchmark/llm_tools/: gpt_interface.py  llm_interface.py  ollama_interface.py  prompts.py
data/astronomy/: astronomy.json  question.txt
dr-input/: random_selection.py
queries/easy/: demo.json
scripts/astronomy/: easy-1.ipynb
solutions/archeology/: archeology-easy-10.py  archeology-easy-11.py  archeology-easy-8.py  archeology-hard-12.py  archeology-hard-7.py  archeology-hard-9.py
system/: __init__.py  api.py
systems/: __init__.py  baseline_system.py
systems/DeepAnalyze/: README.md  __init__.py  eval_response_cache.sh  prompt.py  run.sh
systems/dsguru/: baseline_system.py  baseline_system_variations.py  generator_utils.py
systems/smolagents/: deepresearch.py  pdt.py  reflexion.py  smolagents_prompts.py  smolagents_system.py  text_inspector_tool.py  tools.py
tests/: conftest.py  test_caching_and_parallelization.py  test_gpt_evaluation.py  test_per_task_caching.py
utils/: __init__.py  baseline_utils.py  download_utils.py
workload/: archeology.json  astronomy.json  biomedical.json  environment-sum.json  environment.json  legal-ferdi.json  legal-tiny.json  legal.json  quick-start-questions.json  test.html  wildfire.json
(+108 files in other folders)
