[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kramabench"
version = "1.0.0.dev0"
description = "KramaBench: A benchmark suite for evaluating AI systems on complex reasoning tasks over data"
authors = [
  { name="KramaBench Contributors" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.31.2",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "jinja2>=3.1.4",
  "pillow>=10.0.1",
  "python-dotenv",
  "pandas>=2.2.3",
  "typeguard",
]

[project.optional-dependencies]
litellm = [
  "litellm>=1.60.2",
]
openai = [
  "openai>=1.58.1"
]
dev = [
  "pytest>=8.1.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "-sv --durations=0"

[tool.ruff]
line-length = 119
lint.ignore = [
  "F403",
  "E501",
]
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kramabench", "benchmark", "systems"]
